--- a/check/pom.xml
+++ b/check/pom.xml
@@ -45,6 +45,17 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
+         <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+           <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+             <configuration>
+             <url>http://54.234.25.32:8080/manager/text</url>
+              <server>TomcatServer</server>
+              <path>/helloworld-webapp</path>
+            </configuration>
+       </plugin>
+
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
