--- a/check/pom.xml
+++ b/check/pom.xml
@@ -30,8 +30,7 @@
    
   <distributionManagement>
        <repository>
-         <id>internal.repo</id>
-         <name>Internal repo</name>
+         <id>check</id>
          <url>http://54.234.25.32:8080/manager/text</url>
        </repository>
    </distributionManagement>
